--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
 
         {% else %}
         <form class="form-inline ml-auto">
-          <a href="#" class="btn btn-outline-secondary">Log in</a>
+          <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
           <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
         </form>
 
